datasets/dataset_txt/spaCy/spaCy_457.txt
Contributor
veer-bains commented on 2 Aug 2019
How to reproduce the behaviour
calling
spacy.blank("ko")
produces the following traceback:
`File "/usr/lib64/python2.7/site-packages/spacy/init.py", line 31, in blank
LangClass = util.get_lang_class(name)
File "/usr/lib64/python2.7/site-packages/spacy/util.py", line 70, in get_lang_class
module = importlib.import_module(".lang.%s" % lang, "spacy")
File "/usr/lib64/python2.7/importlib/init.py", line 37, in import_module
import(name)
File "/usr/lib64/python2.7/site-packages/spacy/lang/ko/init.py", line 28
surface: str

       ^
SyntaxError: invalid syntax`
The same script has worked fine for me with other languages, and the same format of data(english, german, chinese, spanish, and a few others), so perhaps this may not be an error on my side.
Your Environment
Operating System: CentOS ("Linux-3.10.0-957.21.3.el7.x86_64-x86_64-with-centos-7.6.1810-Core")
Python Version Used: 2.7
spaCy Version Used: 2.1.6
Environment Information: NIL (running script directly from terminal)